assets/css/swipe.css
:root {
  --primary: salmon;
  --secondary: #fcd5ce;
  --tertiary: #f8edeb;
  --quaternary: #f9dcc4;
  --quinary: #fec89a;
}

html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

#page-1 {
  background-color: var(--primary) !important;
}

/*********************/
/* CAROUSEL ELEMENTS */
/*********************/

#board {
  width: 100%;
  height: 100%;
  position: relative;
}

.card {
  width: 340px;
  height: 420px;
  position: absolute;
  display: flex;
  justify-content: center;
  top: 40%;
  left: 50%;
  border-radius: 0%;
  background-color: var(--tertiary);
  transform: translateX(-50%) translateY(-50%) scale(0.95);
  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
  border-radius: 3%;
}

/*****************/
/* CARD ELEMENTS */
/*****************/

.card-frame {
  position: absolute;
  background-size: cover;
  background-position: center;
  width: 320px;
  height: 320px;
  border-radius: 3%;
  background-color: var(--secondary);
  margin: 10px;
}

.name-age {
  position:absolute;
  margin-left: 10px;
  bottom: 10px;
  display: flex;
  flex-direction: row;
  align-items: baseline;
}

.name {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 40px;
  font-weight: bold;
  color: var(--primary);
  text-shadow: 2px 1px var(--tertiary);
  margin-block-start: 0;
  margin-block-end: 0;
  display: flex;
}

.age {
  margin-left: 10px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 25px;
  font-weight: bold;
  color: var(--tertiary);
  text-shadow: 2px 1px var(--primary);
}

.bio {
  position: fixed;
  width: 90%;
  margin-top: 70px;
  font-size: 13px;
  color: black;
  font-family: Arial, Helvetica, sans-serif;
}

/*******************/
/* MATCH ANIMATION */
/*******************/

.animation {
  position: absolute;
  top: 50%;
  left: 50%;
  animation: pulse 0.5s infinite ease-out;
}

@keyframes pulse {
  0% { transform-origin: center; transform: scale(1) rotate(45deg); }
  50% { transform-origin: center; transform: scale(1.3) rotate(45deg); }
  100% { transform-origin: center; transform: scale(1) rotate(45deg); }
}

.heart-shape{
  position: absolute;
  width: 250px;
  height: 250px;
  transform: translateX(-50%) translateY(-50%);
  background-color: var(--quinary);
}

.heart-shape:before,
.heart-shape:after{
  position: absolute;
  width: 250px;
  height: 250px;
  content: '';
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  background-color: var(--quinary);
}

.heart-shape:before{
  position: absolute;
  bottom: 0px;
  left: -50%;
}

.heart-shape:after{
  position: absolute;
  top: -50%;
  right: 0px;
}

.alert {
  position: relative;
  top: 40%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  transform:  translateX(-60%) translateY(-50%) rotate(-45deg);
  height: 250px;
  width: 250px;
  -moz-border-radius: 125px;
  -webkit-boder-radius: 125px;
  border-radius: 125px;
  border: 5px var(--primary) solid;
  background-size: cover;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items:center;
  z-index: 9999;
}

.match-text {
  position:relative;
  font-size: 48px;
  color: var(--primary);
  text-shadow: 2px 1px var(--tertiary);
  text-align: center;
}

/*****************/
/* MEDIA QUERIES */
/*****************/

@media screen and (max-width: 576px) {
  .card {
    width: 225px;
    height: 350px;
    top: 45%;
  }

  .card-frame {
    width: 205px;
    height: 205px;
  }

  .name {
    font-size: 25px;
  }

  .bio {
    margin-top: 60px;
    width: 82%;
  }

  .heart-shape, .heart-shape:before,.heart-shape:after, .alert {
    width: 170px;
    height: 170px;
  }
}

